# vita-ezremote-client

./: .gitignore  CMakeLists.txt  README.md
auth_server/: server.py
lang/: English.ini  Traditional Chinese.ini
src/: actions.cpp  actions.h  common.h  config.cpp  config.h  fs.cpp  fs.h  ftpclient.cpp  ftpclient.h  gui.h  ime_dialog.cpp  inifile.c  inifile.h  installer.cpp  installer.h  lang.cpp  lang.h  main.cpp  net.cpp  remote_client.h  smbclient.cpp  smbclient.h  textures.cpp  updater.cpp  updater.h  util.h  webdavclient.cpp  webdavclient.h  windows.cpp  windows.h  zip_util.cpp  zip_util.h
src/clients/: apache.cpp  archiveorg.cpp  baseclient.cpp  baseclient.h  ftpclient.cpp  ftpclient.h  gdrive.cpp  gdrive.h  github.cpp  github.h  nfsclient.cpp  nfsclient.h  remote_client.h  smbclient.cpp  smbclient.h  webdav.cpp  webdavclient.cpp  webdavclient.h
src/http/: httplib.cpp  httplib.h  vita_compat.c  vita_compat.h
src/webdav/: request.cpp
